# nav_collision_warning

./: CMakeLists.txt  README.md  package.xml
config/: settings.yaml
include/: find_nearest_obstacle.h  nav_collision_warning.h
launch/: nav_collision_warning.launch  plot_collision_ellipse.launch
scripts/: plot_collision_ellipse.py
src/: find_nearest_obstacle.cpp  nav_collision_warning.cpp
