<?xml version="1.0"?>
<package format="2">
  <name>nav_collision_warning</name>
  <version>1.0.0</version>
  <description>Publish info about the nearest obstacle.</description>

  <author email="andyz@utexas.edu">Andy Zelenak</author>
  <maintainer email="andyz@utexas.edu">Andy Zelenak</maintainer>

  <license>specified in-file</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
